webpages/settings/style.css
html {
  background: var(--content-background);
}

body {
  background: var(--page-background);
  font-family: "Roboto", sans-serif;
  margin: 0;
  height: 100vh;
  overflow: hidden;
  color: var(--content-text);
  font-size: 14px;
}

:not(body)[v-cloak] {
  display: none !important;
}

.navbar {
  height: 60px;
  background: var(--brand-orange);
  color: var(--white-text);
  display: flex;
  align-items: center;
  box-shadow: var(--large-shadow);
  user-select: none;
  position: relative;
  z-index: 10;
}

h1 {
  font-family: "Sora", sans-serif;
  font-size: 18px;
  margin: 0;
  font-weight: 400;
  user-select: none;
}

.navbar a {
  line-height: 0;
}

.logo {
  height: 25px;
  margin: 0 20px;
}
.logo.header-button {
  margin: 0;
  padding: 17.5px 20px;
}

.main {
  display: flex;
  height: calc(100% - 60px);
  width: 100%;
  align-items: stretch;
}

.addons-block {
  flex-grow: 1;
  flex-shrink: 1;
  display: flex;
  flex-direction: column;
  min-width: 400px;
}

.addons-container {
  overflow-y: auto;
  padding: 20px;
  padding-top: 10px;
  scrollbar-width: thin;
  scrollbar-color: var(--gray-text) transparent;
  height: 100vh;
}

.addons-container .placeholder {
  pointer-events: none;
}
.addons-container .placeholder .addon-body:first-child {
  /* Doing this instead of padding in .addons-container itself to avoid
  problems with other CSS that would also set padding on the same element,
  like the "body.iframe .addons-container" selector below */
  margin-top: 42px;
}

@keyframes addonBlink {
  0% {
    border: 1px solid var(--content-border);
  }
  50% {
    border: 1px solid var(--orange);
    filter: drop-shadow(0px 0px 4px var(--orange));
  }
  100% {
    border: 1px solid var(--content-border);
  }
}

.icon-type {
  height: 16px;
  width: 16px;
  vertical-align: middle;
  filter: var(--content-icon-filter);
  margin-inline-end: 8px;
}

.disabled {
  opacity: 50%;
}

.inline-icon {
  height: 16px;
  vertical-align: bottom;
}

.addons-block-header {
  background: var(--search-toolbar-background);
  border-bottom: 1px solid var(--control-border);
  display: flex;
  align-items: center;
  padding: 10px 40px;
  user-select: none;
}

.category-header-title {
  flex-grow: 1;
  font-size: 16px;
  font-weight: 500;
}

.related-addons-header {
  display: flex;
  align-items: center;
}

.back-button {
  width: 24px;
  height: 24px;
  vertical-align: bottom;
  padding: 4px;
  margin-inline-end: 8px;
  border-radius: 4px;
  cursor: pointer;
  transition: 0.2s ease;
  filter: var(--content-icon-filter);
}

.back-button:hover {
  background-color: var(--hover-highlight);
}

.clear-button {
  padding-inline: 7px;
  border-radius: 0 4px 4px 0;
  border-inline-start: none !important;
}
[dir="rtl"] .clear-button {
  border-radius: 4px 0 0 4px;
}
.number-setting .clear-button {
  border-radius: 0 16px 16px 0;
}
[dir="rtl"] .number-setting .clear-button {
  border-radius: 16px 0 0 16px;
}
.clear-button .icon-type {
  margin: 0;
}

.reverted {
  transform: scaleY(-1);
}
.header-button {
  cursor: pointer;
  padding: 17.5px;
  line-height: 0;
  transition: 0.2s ease;
}
.sidebarToggleOpen,
.header-button:hover {
  background: var(--header-hover-darken);
}
.theme-switch {
  height: 25px;
}
.header-end {
  margin-inline-start: auto;
}

.hidden-button {
  /* needs !important because it conflicts with display: block */
  display: none !important;
}
#confirmImport,
#applyLanguageSettingsButton {
  border-color: var(--orange);
}

#search-not-found {
  margin: 10px;
}
body.iframe #search-not-found {
  margin: unset;
  text-align: center;
}

/*scrollbar*/

/* width */
::-webkit-scrollbar {
  width: 7px;
  height: 7px;
}

/* hide track */
::-webkit-scrollbar-track,
::-webkit-scrollbar-corner {
  background: none;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--gray-text);
  border-radius: 4px;
}

body.iframe .tooltiptext:not(.tooltiptexttop) {
  display: none;
}
body.iframe .addon-description {
  display: none;
}
body.iframe .addons-block-header {
  padding: 10px;
}
body.iframe .search-box {
  width: 100%;
}
body.iframe .navbar {
  display: none;
}
body.iframe .main {
  /* No calc -60px because there's no navbar */
  height: 100%;
}
body.iframe .addon-group {
  padding-inline: 6px;
}
body.iframe .addon-group > img {
  margin-inline-end: 5px;
}
body.iframe .addon-topbar {
  height: 44px;
  padding-inline-end: 6px;
}
body.iframe .clickable-area {
  padding-inline-start: 6px;
}
body.iframe .addon-name {
  margin-inline-start: 6px;
}
body.iframe .addon-name .icon-type {
  margin-inline-end: 6px;
}
body.iframe .badge {
  margin-inline-start: 8px;
}

body.iframe .addon-settings {
  padding-inline: 16px;
}
body.iframe .settings-column {
  flex-direction: column;
}
body.iframe .settings-column > .addon-setting {
  margin: 10px 0;
  min-height: 0;
  flex-direction: column;
  align-items: flex-start;
}
body.iframe .setting-label {
  width: auto;
  margin-bottom: 5px;
}
body.iframe .setting-input {
  flex-shrink: 0;
}
body.iframe .addon-setting.boolean-setting {
  margin: 5px 0;
  flex-direction: row;
  align-items: center;
}
body.iframe .addon-setting.boolean-setting .setting-label {
  margin-bottom: 0;
}
body.iframe .presets-column > .setting-label {
  margin-inline-start: 0;
  margin-top: 10px;
  margin-bottom: 0;
  width: 100%;
}
body.iframe .presets-column > .addon-setting {
  margin: 5px 0;
  margin-inline-end: 10px;
}
body.iframe .presets-column > .addon-setting:last-child {
  margin-inline-end: 0;
}

body.iframe .addons-container {
  padding: 10px 0;
}
body.iframe .filter-options {
  flex-wrap: wrap;
}
body.iframe .filter-option {
  flex-grow: 1;
  text-align: center;
}
body.iframe .search-box input {
  flex-grow: 1;
  flex-basis: 0;
}

.categories-shrink {
  text-align: right;
  bottom: 0;
  position: fixed;
  margin: 5px;
  cursor: pointer;
  user-select: none;
}
.categories-shrink img {
  vertical-align: middle;
  filter: var(--content-icon-filter);
}
.flipped {
  transform: scaleX(-1);
}

/* Hide categories and prevent logo from jumping while loading in the popup and small mode */
@media (max-width: 1099px) {
  body[v-cloak] .logo {
    margin-inline-start: 42px;
  }

  body[v-cloak] .categories-block,
  body[v-cloak] .categories-shrink {
    display: none;
  }
}

/* Hide top bar while loading in the popup */
@media (max-width: 400px) {
  body[v-cloak] .navbar {
    display: none;
  }
}

.permissions div.main {
  display: block;
  box-sizing: border-box;
  max-width: fit-content;
  margin: auto;
  padding: 2rem;
  overflow-y: auto;
  scrollbar-width: thin;
  scrollbar-color: var(--gray-text) transparent;
}

.permissions-block {
  margin-top: 1rem;
  font-size: 1.25rem;
}

.permissions-block h2 {
  font-family: "Sora", sans-serif;
  font-size: 3rem;
  font-weight: 600;
  margin: 0;
}

.permissions-steps {
  display: flex;
  align-items: flex-end;
  gap: 2rem;
}

.permissions-steps > div {
  display: flex;
  flex-direction: column;
  align-items: center;
}

@media (max-width: 1000px) {
  .permissions-steps {
    flex-direction: column;
    align-items: center;
  }
}

#permissionsBtn {
  display: block;
  height: 6rem;
  width: 18rem;
  font-family: "Sora", sans-serif;
  font-size: 2.5rem;
  cursor: pointer;
}

#screenshot {
  width: 24rem;
  max-width: 100%;
}

color-picker {
  z-index: 2;
  position: absolute;
  top: calc(100% - 1px);
  left: 0;
  border: 1px solid var(--control-border);
  --color-picker-background-color: var(--button-background);
  --color-picker-color: var(--content-text);
  --color-picker-font-family: Roboto, sans-serif;
}

button.setting-input.color {
  width: 100px;
  transition: border-radius 0.2s ease;
}

button.setting-input.color.open {
  border-bottom-left-radius: 0;
}

.color-container {
  background: linear-gradient(45deg, #777 25%, transparent 25%), linear-gradient(-45deg, #777 25%, transparent 25%),
    linear-gradient(45deg, transparent 75%, #777 75%), linear-gradient(-45deg, transparent 75%, #777 75%);
  background-size: 6px 6px;
  background-position:
    0 0,
    0 3px,
    3px -3px,
    -3px 0px;
  border-radius: 5px;
  background-color: white;
  display: flex;
  position: relative;
}
.color-container .setting-input.color {
  cursor: pointer;
}

.action-disabled {
  pointer-events: none;
}

#iframe-fullscreen-suggestion {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  border-radius: 4px;
  background-color: var(--content-background);
  border: 1px solid var(--content-border);
  box-shadow: var(--content-shadow);
  padding: 20px 0;
  margin: 10px;
}
#iframe-fullscreen-suggestion > span {
  width: 100%;
  font-weight: bold;
  font-size: 14px;
  margin-bottom: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  user-select: none;
}

